# learn

./: .gitignore  C10K.sln
C10K/: C10K-Debug.vgdbsettings  C10K-Release.vgdbsettings  C10K.vcxproj  C10K.vcxproj.filters  CMakeLists.txt  CMakeLists.txt.old  gcc_Debug.h  gcc_Release.h
C10K/include/: SimpleClientApi.h  SimpleServerApi.h
C10K/src/: CMakeLists.txt
C10K/src/test/: CMakeLists.txt  server_with_multiple_process.cpp  simple_client.cpp  simple_server.cpp
C10K/src/utility/: CMakeLists.txt  SimpleClientApi.cpp  SimpleServerApi.cpp
CodeDB/C10K-Debug-Win32/: GlobalFileTable.000  GlobalFileTable.001  SimpleClientApi.npa01  SimpleClientApi.npd  SimpleClientApi.rdb  SimpleServerApi.npa01  SimpleServerApi.npd  SimpleServerApi.rdb  test_epoll_c10k.npa00  test_epoll_c10k.npd  test_epoll_c10k.rdb  tmp00000003.npa00
CodeDB/C10K-Debug-Win32.0001/: SimpleClientApi.npa00  SimpleClientApi.npd  SimpleClientApi.rdb  SimpleServerApi.npa00  SimpleServerApi.npd  SimpleServerApi.rdb  simple_client.npa01  simple_client.npd  simple_client.rdb  simple_server.npa00  simple_server.npd  simple_server.rdb
